# zk-sudoku

./: .gitignore  README.md
example/: Cargo.toml  README.md
example/src/: main.rs
openvm_proof/: .gitignore  README.md  rust-toolchain.toml
openvm_proof/src/: main.rs
sp1-sudoku/lib/src/: lib.rs
sp1-sudoku/program/: Cargo.toml
sp1-sudoku/program/src/: main.rs
sp1-sudoku/script/: Cargo.toml
sp1_proof/program/src/: main.rs
sudoku/: .gitignore  Cargo.toml  cachegrind.out.10187  perf.data  sudoku.txt
sudoku/src/: lib.rs  main.rs
sudoku/src/core/: board.rs  mod.rs  random.rs  solver.rs
sudoku/src/sudoku/: board.rs  error.rs  mod.rs  random.rs  solver.rs
zk_sudoku/: Cargo.toml  README.md
zk_sudoku/src/: main.rs
